examples/test/testpolicy3861.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3861
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key49: value38
      key45: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value18
          key1: value29
      podSelector:
        matchLabels:
          key33: value34
          key22: value11
